--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "LibreFranklin";
+  src: url("../font/LibreFranklin.ttf") format("truetype");
+}
 * {
   box-sizing: border-box;
   padding: 0;
@@ -6,6 +10,7 @@
 
 html {
   font-size: 62.5%;
+  font-family: "LibreFranklin";
 }
 
 body {
@@ -13,4 +18,13 @@ body {
   height: 100vh;
   display: grid;
   place-items: center;
+}
+
+.main-container {
+  width: 360px;
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
