--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,29 @@
+//attributes:
+$blue:hsl(223, 87%, 63%);
+//secondary colors:
+$paleBlue:hsl(223, 100%, 88%);
+$lightRed:hsl(354, 100%, 66%);
+
+//neutral colors:
+$grey: hsl(0, 0%, 59%);
+$veryDarkBlue:hsl(209, 33%, 12%);
+
+//font:
+
+@font-face {
+    font-family: 'LibreFranklin';
+    src: url('../font/LibreFranklin.ttf') format('truetype');
+}
+
+
+@mixin flexCentered(){
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+}
+
+
 *{
     box-sizing: border-box;
     padding:0;
@@ -5,6 +31,7 @@
 }
 html{
     font-size: 62.5%;
+    font-family: 'LibreFranklin';
 }
 
 body{
@@ -12,4 +39,12 @@ body{
     height:100vh;
     display:grid;
     place-items: center;
+}
+
+.main-container{
+    width:360px;
+    height:75vh;
+    @include flexCentered;
+
+
 }
