--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,11 +16,11 @@ $veryDarkBlue:hsl(209, 33%, 12%);
 }
 
 
-@mixin flexCentered(){
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    flex-direction:column;
+@mixin flexCentered($d,$j,$a,$f){
+    display:$d;
+    justify-content:$j;
+    align-items:$a;
+    flex-direction:$f;
 }
 
 
@@ -42,9 +42,15 @@ body{
 }
 
 .main-container{
+    margin-top:55px;
     width:360px;
     height:75vh;
-    @include flexCentered;
+    @include flexCentered(flex,none,center,column);
 
+        .title-container{
+            margin-bottom:35px;
+
+                .image-title--container{}
+        }
 
 }
