--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,11 @@ body {
   border-radius: 50px;
   outline: none;
   border: 1px solid hsl(223, 100%, 88%);
-  margin-bottom: 15px;
+  margin-bottom: 8px;
   font-size: 1.4rem;
+}
+.main-container .input-email--container .wrong-email--container {
+  color: hsl(354, 100%, 66%);
+  font-size: 1rem;
+  margin-bottom: 18px;
 }
