--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -98,6 +98,22 @@ body{
                     font-size:1.0rem;
                     margin-bottom:18px;
                 }
+
+                .primary-button{
+                    margin-bottom:15px;
+                    width:308px;
+                    height:41px;
+                    color:white;
+                    background-color:$blue;
+                    box-shadow:2px 4px 8px rgba(0,0,0,0.5);
+                    border-radius: 50px;
+                    border:none;
+                        &:hover{
+                            cursor:pointer;
+                            background-color: $paleBlue;
+                            box-shadow:2px 2px 2px rgba(0,0,0,0.2);
+                        }
+                }
         }
 
 }
